# fda-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  test_agent.py
data/: audit.db
data/vector_store/: chroma.sqlite3
src/: agent.py  config.py  db.py  ingest.py  main.py  retriever.py  schema.py  verifier.py
src/core/: agent.py  schema.py  verifier.py
src/infra/: ingest.py  retriever.py  store.py
src/scripts/: batch.py  build_knowledge_base.py  main.py  query_agent.py  report.py  visualize.py
tests/: test_ingest.py  test_verifier.py
